Final implementation before review  - implemented status update  - implemented search  - implemented solve  - started working on server controlled chatroom 	modified:   .vscode/settings.json 	modified:   Client_app/CMakeLists.txt 	deleted:    Client_app/include/Player.h 	deleted:    Client_app/src/Player.cpp 	modified:   Client_app/src/main.cpp 	modified:   Server_app/include/Item.h 	modified:   Server_app/include/PlayerSession.h 	modified:   Server_app/include/Puzzle.h 	modified:   Server_app/src/GameManager.cpp 	modified:   Server_app/src/Item.cpp 	modified:   Server_app/src/PlayerSession.cpp 	modified:   Server_app/src/Puzzle.cpp 	modified:   Server_app/src/main.cpp 	new file:   build_all.ps1

--- a/Client_app/CMakeLists.txt
+++ b/Client_app/CMakeLists.txt
@@ -16,11 +16,8 @@ find_path(CPPZMQ_INCLUDE_DIRS zmq.hpp)
 include_directories(${PC_ZMQ_INCLUDE_DIRS} ${CPPZMQ_INCLUDE_DIRS})
 link_directories(${PC_ZMQ_LIBRARY_DIRS})
 
-# Add the Player library
-add_library(PlayerLib src/Player.cpp)
-
 # Main executable
 add_executable(${PROJECT_NAME} src/main.cpp)
 
 # Link libraries
-target_link_libraries(${PROJECT_NAME} PlayerLib ${PC_ZMQ_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${PC_ZMQ_LIBRARIES})
